--- a/app/views/course/degree-subject.html
+++ b/app/views/course/degree-subject.html
@@ -1,63 +1,57 @@
 {% extends "layout.html" %}
-{% set title = "Degree subject requirements" %}
+{% set title = "Degree subject" %}
 {% set backLink = course.path + "/degree-level" %}
 
 {% block content %}
-  {% include "course/_errors.html" %}
-
-  <div class="govuk-grid-row">
+  <form action="{{ course.path }}" method="post" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form action="{{ course.path }}" method="post">
+      {% include "course/_errors.html" %}
 
-        <h1 class="govuk-heading-l">Degree subject</h1>
+      <h1 class="govuk-heading-xl">
+        <span class="govuk-caption-xl">{{ course.name | safe }} ({{ course.programmeCode }})</span>
+        {{ title }}
+      </h1>
 
-        <p>Candidates will be advised that their degree subject should match or be closely related to {{ course.subject }}.</p>
+      <p class="govuk-body">Candidates will be advised that their degree subject should match or be closely related to {{ course.subject }}.</p>
 
-        {% set degreeSubjectRequirementsHtml %}
-          {{ govukTextarea({
-            id: "degree-subject-requirements",
-            name: course.programmeCode + '-degree-subject-requirements',
-            spellcheck: true,
-            label: {
-              text: "Degree subject requirements"
-            }
-          }) }}
-        {% endset -%}
-
-        {% set radioName = course.programmeCode + '-degree-subject-required' %}
-        {{ govukRadios({
-          idPrefix: "degree-subject",
-          name: radioName,
-          fieldset: {
-            legend: {
-              text: "Do you have more specific degree subject requirements?",
-              isPageHeading: true,
-              classes: "govuk-fieldset__legend--m"
-            }
-          },
-          items: [
-            {
-              value: "No",
-              text: "No",
-              checked: (data[radioName] === "No")
-            },
-            {
-              value: "Yes",
-              text: "Yes",
-              checked: (data[radioName] === "Yes"),
-              conditional: {
-                html: degreeSubjectRequirementsHtml
-              }
-            }
-          ]
+      {% set degreeSubjectRequirementsHtml %}
+        {{ govukTextarea({
+          id: "degree-subject-requirements",
+          name: course.programmeCode + "-degree-subject-requirements",
+          spellcheck: true,
+          label: {
+            text: "Degree subject requirements"
+          }
         }) }}
+      {% endset -%}
 
-        {{ govukButton({
-          text: "Save"
-        }) }}
-      </form>
+      {% set radioName = course.programmeCode + '-degree-subject-required' %}
+      {{ govukRadios({
+        idPrefix: "degree-subject",
+        name: radioName,
+        fieldset: {
+          legend: {
+            text: "Do you have more specific degree subject requirements?",
+            classes: "govuk-fieldset__legend--m"
+          }
+        },
+        items: [{
+          value: "No",
+          text: "No",
+          checked: (data[radioName] === "No")
+        }, {
+          value: "Yes",
+          text: "Yes",
+          checked: (data[radioName] === "Yes"),
+          conditional: {
+            html: degreeSubjectRequirementsHtml
+          }
+        }]
+      }) }}
+
+      {{ govukButton({
+        text: "Save"
+      }) }}
     </div>
-  </div>
-
-
+  </form>
 {% endblock %}
