--- a/app/views/allocations/check-answers.html
+++ b/app/views/allocations/check-answers.html
@@ -1,56 +1,45 @@
 {% extends "layout.html" %}
-{% set title = 'Check your answers' %}
+{% set title = "Check your information before sending your requests" %}
 {% set backLink = "/allocations/request-places" %}
-{% block pageTitle %}{{ title }}{% endblock %}
-{% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 
 {% set requestingProviderName %}
-	{% if data['requestingProvider'] != "Find an organisation not listed above" %}
-		{{ data['requestingProvider'] }}
-	{% else %}
-		{{ data['schoolList'] }}
-	{% endif %}
+  {% if data.requestingProvider != "Find an organisation not listed above" %}
+    {{ data.requestingProvider }}
+  {% else %}
+    {{ data.schoolList }}
+  {% endif %}
 {% endset %}
 
 {% block content %}
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">
+        <span class="govuk-caption-xl">{{ requestingProviderName }}</span>
+        {{ title }}
+      </h1>
 
-<div class="govuk-grid-row">
-	<div class="govuk-grid-column-two-thirds">
+      {{ govukSummaryList({
+        rows: [{
+          key: {
+            text: "Places requested"
+          },
+          value: {
+            text: data.requestedAmount
+          },
+          actions: {
+            items: [{
+              href: "/allocations/request-places",
+              text: "Change",
+              visuallyHiddenText: "places requested"
+            }]
+          }
+        }]
+      }) }}
 
-	<h1 class="govuk-heading-xl">
-		<span class="govuk-caption-xl">{{ requestingProviderName }}</span>
-		Check your information before sending your requests
-	</h1>
-
-		<div class="body-text">
-
-			{{ govukSummaryList({
-				rows: [
-					{
-						key: {
-							text: "Places requested"
-						},
-						value: {
-							text: data.requestedAmount
-						},
-						actions: {
-							items: [
-								{
-									href: "/allocations/request-places",
-									text: "Change",
-									visuallyHiddenText: "places requested"
-								}
-							]
-						}
-					}
-				]
-			}) }}
-
-		</div>	
-
-    {{ govukButton({href: "/allocations/confirmation", text: "Send request"}) }}
-
-	</div>
-</div>
-
+      {{ govukButton({
+        href: "/allocations/confirmation",
+        text: "Send request"
+      }) }}
+    </div>
+  </div>
 {% endblock %}
