--- a/app/views/allocations/index.html
+++ b/app/views/allocations/index.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
-{% set title = pageTitle %}
-{% block pageTitle %}{{ title }}{% endblock %}
-{% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
+{% set title %}
+  {% if data["allocations-window"] == "open" %}
+    Request PE courses for 2022 to 2023
+  {% else %}
+    Fee-funded PE courses for 2022 to 2023
+  {% endif %}
+{% endset %}
 
 {% block pageNavigation %}
   {{ govukBreadcrumbs({
@@ -10,36 +14,27 @@
 {% endblock %}
 
 {% set requestingProviderName %}
-	{% if data['requestingProvider'] != "Find an organisation not listed above" %}
-		{{ data['requestingProvider'] }}
-	{% else %}
-		{{ data['schoolList'] }}
-	{% endif %}
+  {% if data.requestingProvider != "Find an organisation not listed above" %}
+    {{ data.requestingProvider }}
+  {% else %}
+    {{ data.schoolList }}
+  {% endif %}
 {% endset %}
 
 {% set enfieldChangeLinktext %}
-  {% if data['offer-pe'] %}
+  {% if data["offer-pe"] %}
     Change
   {% else %}
     Confirm choice
   {% endif %}
 {% endset %}
 
-{% set pageTitle %}
-  {% if data['allocations-window'] == 'open' %}
-    Request PE courses for 2022 to 2023
-  {% else %}
-    Fee-funded PE courses for 2022 to 2023
-  {% endif %}
-{% endset %}
-
 {% block content %}
-  {# allocations is open #}
-  {% if data['allocations-window'] == 'open' %}
+  {# Allocations is open #}
+  {% if data["allocations-window"] == "open" %}
     <div class="govuk-grid-row">
-
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
+        <h1 class="govuk-heading-xl">{{ title }}</h1>
         <p>You must request any fee-funded PE courses for 2022 to 2023 by 10 July 2021. You do not need to request any other courses, including salaried PE.</p>
         <p>Once you’ve made a request, you can change it before 10 July.</p>
         <h2 class="govuk-heading-l govuk-!-margin-top-4">Do you want to request PE again for these organisations?</h2>
@@ -48,9 +43,9 @@
         <p>We’ll contact you in September to tell you if the request has been approved and how many places have been allocated.</p>
       </div>
     </div>
+
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
-        
         <div class="body-text">
           <table class="govuk-table ucas-info-table">
             <thead class="govuk-table__head">
@@ -66,9 +61,9 @@
                     Enfield County School for Girls
                 </th>
                 <td class="govuk-table__cell">
-                  {% if data['offer-pe'] == "Yes" %}
+                  {% if data["offer-pe"] == "Yes" %}
                     <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--green">Requested</span>
-                  {% elseif data['offer-pe'] == "No" %}
+                  {% elseif data["offer-pe"] == "No" %}
                     <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--red">Not requested</span>
                   {% else %}
                     <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--grey">Yet to request</span>
@@ -106,24 +101,21 @@
 
         {# Only show this section if they have gone through the new provider flow #}
         {% if data["requestingProvider"] or data["schoolList"] %}
-
           <div class="body-text">
             <h2 class="govuk-heading-m govuk-!-margin-top-7">New PE courses in 2022 to 2023</h2>
             <table class="govuk-table ucas-info-table">
               <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
-                  <th class="govuk-table__header subject-col" style="width: 35%">Organisation</th>
-                  <th class="govuk-table__header status-col" style="width: 25%">Status</th>
-                  <th class="govuk-table__header status-col"><span class="govuk-visually-hidden">Actions</span></th>
+                  <th class="govuk-table__header govuk-!-width-one-third" style="width: 35%">Organisation</th>
+                  <th class="govuk-table__header" style="width: 25%">Status</th>
+                  <th class="govuk-table__header"><span class="govuk-visually-hidden">Actions</span></th>
                 </tr>
               </thead>
               <tbody class="govuk-table__body">
-
                 <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header">
-                      {{ requestingProviderName }}
-                    </th>
-                  </td>
+                  <th scope="row" class="govuk-table__header">
+                    {{ requestingProviderName }}
+                  </th>
                   <td class="govuk-table__cell">
                     <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--green">{{ data["requestedAmount"] }} places requested</span>
                   </td>
@@ -137,7 +129,7 @@
         {% endif %}
       </div>
     </div>
-    
+
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <h2 class="govuk-heading-l govuk-!-margin-top-4">Do you want to request PE for any other organisations?</h2>
@@ -149,7 +141,6 @@
   {% elseif data["allocations-window"] == "closed" %}
 
     <div class="govuk-grid-row">
-
       <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
         <p>You can no longer request fee-funded PE for 2022 to 2023. The request window closed on 10 July.</p>
@@ -158,24 +149,22 @@
         <p class="govuk-body">For now, if you have any questions contact <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher@digital.education.gov.uk</a>.</p>
       </div>
     </div>
-    
+
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-
-      <h2 class="govuk-heading-m">Courses for 2022 to 2023</h2>
-        
+        <h2 class="govuk-heading-m">Courses for 2022 to 2023</h2>
         <div class="body-text">
           <table class="govuk-table ucas-info-table govuk-!-margin-bottom-9">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
-                <th class="govuk-table__header subject-col" style="width: 70%">Organisation</th>
-                <th class="govuk-table__header status-col">Status</th>
+                <th class="govuk-table__header" style="width: 70%">Organisation</th>
+                <th class="govuk-table__header">Status</th>
               </tr>
             </thead>
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">
-                    Enfield County School for Girls
+                  Enfield County School for Girls
                 </th>
                 <td class="govuk-table__cell">
                   <span class="govuk-tag govuk-tag--green">Requested</span>
@@ -183,7 +172,7 @@
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">
-                    London Academy
+                  London Academy
                 </th>
                 <td class="govuk-table__cell">
                   <span class="govuk-tag govuk-tag--green">Requested</span>
@@ -192,10 +181,9 @@
             </tbody>
           </table>
         </div>
-      
-      <h2 class="govuk-heading-m">Courses not running in 2022 to 2023</h2>
-        
-      <div class="body-text">
+
+        <h2 class="govuk-heading-m">Courses not running in 2022 to 2023</h2>
+
         <table class="govuk-table ucas-info-table govuk-!-margin-bottom-9">
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
@@ -215,57 +203,50 @@
           </tbody>
         </table>
       </div>
-
     </div>
-  </div>
-    
+
   {% else %}  {# Allocations is confirmed #}
 
     <div class="govuk-grid-row">
-
       <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
         <p>You requested fee-funded PE for the following organisations for 2022 to 2023. These requests have been approved. Each organisation’s allocation is also included.</p>
         <p class="govuk-body">If you have any questions, contact <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher@digital.education.gov.uk</a>.</p>
       </div>
     </div>
-    
+
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        
-        <div class="body-text">
-          <table class="govuk-table ucas-info-table govuk-!-margin-bottom-9">
-            <thead class="govuk-table__head">
-              <tr class="govuk-table__row">
-                <th class="govuk-table__header subject-col">Organisation</th>
-                <th class="govuk-table__header status-col">Number of places</th>
-              </tr>
-            </thead>
-            <tbody class="govuk-table__body">
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header">
-                    Enfield County School for Girls
-                </th>
-                <td class="govuk-table__cell">
-                  3
-                </td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header">
-                    London Academy
-                </th>
-                <td class="govuk-table__cell">
-                  6
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+        <table class="govuk-table ucas-info-table govuk-!-margin-bottom-9">
+          <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+              <th class="govuk-table__header subject-col">Organisation</th>
+              <th class="govuk-table__header status-col">Number of places</th>
+            </tr>
+          </thead>
+          <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header">
+                Enfield County School for Girls
+              </th>
+              <td class="govuk-table__cell">
+                3
+              </td>
+            </tr>
+            <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header">
+                London Academy
+              </th>
+              <td class="govuk-table__cell">
+                6
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   {% endif %}
 
   <h2 class="govuk-heading-m">Tell us what you think about this process</h2>
   <p class="govuk-body"><a class="govuk-link govuk-!-font-weight-bold" target="_blank" href="#">Take part in our brief survey to help us improve Publish</a></p>
-
 {% endblock %}
