--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -266,7 +266,7 @@
   {
     classes: macros.requiredSummaryRowClasses(code + "-training-location", showErrors),
     key: {
-      text: "Academic training location"
+      text: "Academic training"
     },
     value: {
       html: trainingLocationHtml
