--- a/app/views/accredited-body/provider-courses.html
+++ b/app/views/accredited-body/provider-courses.html
@@ -22,13 +22,13 @@
       <table class="govuk-table ucas-info-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th class="govuk-table__header subject-col" style="width: 380px">Course</th>
-            <th class="govuk-table__header status-col" style="width: 160px">Status</th>
-            <th class="govuk-table__header published-col" style="width: 150px">
-              {% if data['next-cycle'] %}Will it be{% else %}Is it{% endif %} on <abbr title="Find postgraduate teacher training" style="text-decoration: underline; text-decoration-style: dotted;">Find</abbr>?
+            <th class="govuk-table__header govuk-!-width-one-third">Course</th>
+            <th class="govuk-table__header">Status</th>
+            <th class="govuk-table__header">
+              {% if data['next-cycle'] %}Will it be{% else %}Is it{% endif %} on <abbr title="Find postgraduate teacher training">Find</abbr>?
             </th>
-            <th class="govuk-table__header applications-col">Applications</th>
-            <th class="govuk-table__header type-col">Vacancies</th>
+            <th class="govuk-table__header">Applications</th>
+            <th class="govuk-table__header">Vacancies</th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
