--- a/app/views/courses/index.html
+++ b/app/views/courses/index.html
@@ -24,55 +24,44 @@
     {{ title }}
   </h1>
 
-  <p>Use this section to:</p>
-  <ul class="govuk-list govuk-list--bullet">
-    <li>preview and publish courses</li>
-    <li>write about each course</li>
-    <li>copy content between courses</li>
-    <li>add new courses</li>
-  </ul>
+  {{ govukButton({
+    text: "Add a new course",
+    href: newCourseFormUrl
+  }) if data["ucasCourses"].length > 10 }}
 
-  {% if data['ucasCourses'].length > 10 %}
-    <div class="govuk-!-margin-top-3">
-      <a href="{{ newCourseFormUrl }}" class="govuk-button" target="_blank">Add a new course</a>
-    </div>
-  {% endif %}
-
-  {% if data['ucasCourses'].length > 0 %}
-    {% for accrediting in data['accreditors'] %}
-      {% if data['accreditors'][0]['name'] != data['training-provider-name'] %}
+  {% if data["ucasCourses"].length > 0 %}
+    {% for accrediting in data["accreditors"] %}
+      {% if accrediting.name != data["training-provider-name"] %}
         <h3 class="govuk-heading-m">
           <span class="govuk-caption-m">Accredited body</span>
           {{ accrediting.name }}
         </h3>
       {% endif %}
-      <div class="body-text">
-        <table class="govuk-table ucas-info-table">
-          <thead class="govuk-table__head">
-            <tr class="govuk-table__row">
-              <th class="govuk-table__header subject-col" style="width: 380px">Course</th>
-              <th class="govuk-table__header status-col" style="width: 160px">Status</th>
-              <th class="govuk-table__header published-col" style="width: 150px">
-                {% if data['next-cycle'] %}Will it be{% else %}Is it{% endif %} on <abbr title="Find postgraduate teacher training" style="text-decoration: underline; text-decoration-style: dotted;">Find</abbr>?
-              </th>
-              <th class="govuk-table__header applications-col">Applications</th>
-              <th class="govuk-table__header type-col">Vacancies</th>
-            </tr>
-          </thead>
-          <tbody class="govuk-table__body">
-            {% for course in data['ucasCourses'] %}
-              {% if course.accrediting == accrediting.name %}
-                {% include "includes/_courses-table-row.html" %}
-              {% endif %}
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
+      <table class="govuk-table ucas-info-table">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header govuk-!-width-one-third">Course</th>
+            <th class="govuk-table__header">Status</th>
+            <th class="govuk-table__header">
+              {% if data["next-cycle"] %}Will it be{% else %}Is it{% endif %} on <abbr title="Find postgraduate teacher training">Find</abbr>?
+            </th>
+            <th class="govuk-table__header">Applications</th>
+            <th class="govuk-table__header">Vacancies</th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          {% for course in data["ucasCourses"] %}
+            {% if course.accrediting == accrediting.name %}
+              {% include "includes/_courses-table-row.html" %}
+            {% endif %}
+          {% endfor %}
+        </tbody>
+      </table>
     {% endfor %}
   {% endif %}
 
-  <div class="govuk-!-margin-top-3">
-    <a href="{{ newCourseFormUrl }}" class="govuk-button" target="_blank">Add a new course</a>
-  </div>
-
+  {{ govukButton({
+    text: "Add a new course",
+    href: newCourseFormUrl
+  }) }}
 {% endblock %}
