--- a/app/views/location/upload-review.html
+++ b/app/views/location/upload-review.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "Review uploaded training location data" %}
+{% set title = "Review locations" %}
 
 {% block pageNavigation %}
   {{ govukBreadcrumbs({
@@ -13,14 +13,12 @@
 {% endblock %}
 
 {% block content %}
-  <form action="/locations/" method="post" class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
-        {{ title }}
-      </h1>
-    </div>
+  <form action="/locations/?success=uploaded" method="post">
+    <h1 class="govuk-heading-xl">
+      {{ title }}
+    </h1>
 
-    <table class="govuk-table">
+    <table class="govuk-table app-table--vertical-align-middle">
       <caption class="govuk-table__caption govuk-table__caption--m">{{ locations | length }} recognised locations found</caption>
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
@@ -33,14 +31,20 @@
         {% for location in locations %}
         <tr class="govuk-table__row">
           <td class="govuk-table__cell">
-            {{ location.urn }}
+            {{ govukCheckboxes({
+              formGroup: {
+                classes: "govuk-!-margin-bottom-0"
+              },
+              classes: "govuk-checkboxes--small",
+              items: [{
+                value: location.urn,
+                text: location.urn,
+                checked: true
+              }]
+            }) }}
           </td>
-          <td class="govuk-table__header">
-            {{ location.name }}
-          </td>
-          <td class="govuk-table__cell">
-            {{ location.address }}
-          </td>
+          <td class="govuk-table__header">{{ location.name }}</td>
+          <td class="govuk-table__cell">{{ location.address }}</td>
         </tr>
         {% endfor %}
       </tbody>
@@ -48,7 +52,7 @@
 
     <div class="govuk-button-group">
       {{ govukButton({
-        text: "Save and publish locations"
+        text: "Add selected locations"
       }) }}
 
       <a class="govuk-link" href="/locations">Cancel</a>
