Copy changes for uploading locations

--- a/app/views/location/upload.html
+++ b/app/views/location/upload.html
@@ -19,7 +19,7 @@
         {{ title }}
       </h1>
 
-      <p class="govuk-body">Something about the type of file that can be accepted. Probably a CSV of Unique reference numbers (URNs), which we can describe here.</p>
+      <p class="govuk-body">Add multiple locations by providing a CSV of Unique reference numbers (URNs). You can review addresses before adding them to your account.</p>
 
       {{ govukFileUpload({
         id: "file-upload",
