--- a/app/views/location/upload-review.html
+++ b/app/views/location/upload-review.html
@@ -18,8 +18,8 @@
       {{ title }}
     </h1>
 
+    <h2 class="govuk-heading-m">{{ locations | length }} recognised locations found</h2>
     <table class="govuk-table app-table--vertical-align-middle">
-      <caption class="govuk-table__caption govuk-table__caption--m">{{ locations | length }} recognised locations found</caption>
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th class="govuk-table__header" scope="col">URN</th>
