--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -116,7 +116,7 @@
           {% if data[code + "-placement-policy"] == "hosted" %}
             <p>You will be placed in different schools during your training. You can select your host school when you apply.</p>
           {% elif data[code + "-placement-policy"] == "placed" %}
-            <p>You will be placed in different schools during your training. You can’t pick which schools you want to be in, but your course will try to place you in schools you can commute to. Placements are arranged with candidates before their training starts</p>
+            <p>You will be placed in different schools during your training. You can’t pick which schools you want to be in, but your course will try to place you in schools you can commute to.</p>
           {% endif %}
 
           {% if data[code + "-training-location"] == "Takes place remotely" %}
