--- a/app/views/rolled-over.html
+++ b/app/views/rolled-over.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = "Prepare for the next cycle" %}
-{% set backLink = "/" %}
+{% set backLink = "/cycles" %}
 
 {% block content %}
   <div class="govuk-grid-row">
