Update location questions

--- a/app/views/new/placement-locations.html
+++ b/app/views/new/placement-locations.html
@@ -15,6 +15,10 @@
             classes: "govuk-fieldset__legend--xl"
           }
         },
+        hint: {
+          classes: "govuk-!-margin-bottom-6",
+          html: "<a href=\"/locations\">Manage all your locations</a> to add to or edit this list."
+        },
         items: items
       }) }}
 
